--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </head>
 
 <body>
-  <a href="https://rlrgc.github.io/SIN/SiteWeb/SIN_TP.html" > Liens </a>    
+  <a href="https://rlrgc.github.io/SIN/PageWeb/SIN_TP.html" > Liens </a>    
 </body>
