--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 </head>
 
 <body>
-  <a href="https://rlrgc.github.io/SIN/PageWeb/SIN_TP.html" > Liens </a>    
+  <a href="https://rlrgc.github.io/SIN/PageWeb/SIN_TP.html" > Liens </a> 
+
+<ul>
+    <li><a download href="Calculatrice.py">Calculatrice.py</a></li>
+    <li><a download href="Casino_Gael.py">Casino_Gael.py</a></li>
+    <li><a download href="Casino_Ronan.py">Casino_Ronan.py</a></li>
+    <li><a download href="Juste_Prix.py">Juste_Prix.py</a></li>
+    <li><a download href="ModuleEquation.py">ModuleEquation.py</a></li>
+    <li><a download href="casino.py">casino.py</a></li>
+    <li><a download href="entrainement2-biblio.py">entrainement2-biblio.py</a></li>
+</ul>
 </body>
