--- a/index.html
+++ b/index.html
@@ -23,25 +23,29 @@
         .Python .G{
             border:1px solid darkblue;
         }
-
-        details{background-color:rgba(0,0,0,0.2);border:2px solid black}
+        details{
+            background-color:rgba(0,0,0,0.2);
+            border:2px solid black
+        }
+        details:hover{
+            cursor:pointer
+        }
     </style>
 </head>
 
 <body>
-  <a href="https://rlrgc.github.io/SIN/PageWeb/SIN_TP.html" > Liens </a> 
-
-<details>
-    <summary>Fichiers de gaelBZH et RLRGC</summary>
-        <h3>I- Python</h3>
-        <ul class="Python">
-            <li><a class="R" download href="Calculatrice.py">Calculatrice.py</a></li>
-            <li><a class="G" download href="Casino_Gael.py">Casino_Gael.py</a></li>
-            <li><a class="R" download href="Casino_Ronan.py">Casino_Ronan.py</a></li>
-            <li><a class="R" download href="Juste_Prix.py">Juste_Prix.py</a></li>
-            <li><a class="G" download href="ModuleEquation.py">ModuleEquation.py</a></li>
-            <li><a class="R" download href="casino.py">casino.py</a></li>
-            <li><a class="R" download href="entrainement2-biblio.py">entrainement2-biblio.py</a></li>
-        </ul>
-</details>
+    <a href="https://rlrgc.github.io/SIN/PageWeb/SIN_TP.html" > Liens </a> 
+    <details>
+        <summary>Fichiers de gaelBZH et RLRGC</summary>
+            <h3>I- Python</h3>
+            <ul class="Python">
+                <li><a class="R" download href="Calculatrice.py">Calculatrice.py</a></li>
+                <li><a class="G" download href="Casino_Gael.py">Casino_Gael.py</a></li>
+                <li><a class="R" download href="Casino_Ronan.py">Casino_Ronan.py</a></li>
+                <li><a class="R" download href="Juste_Prix.py">Juste_Prix.py</a></li>
+                <li><a class="G" download href="ModuleEquation.py">ModuleEquation.py</a></li>
+                <li><a class="R" download href="casino.py">casino.py</a></li>
+                <li><a class="R" download href="entrainement2-biblio.py">entrainement2-biblio.py</a></li>
+            </ul>
+    </details>
 </body>
