--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .Python li a, .Python li a:visited{
             color:black;
         }
-        .Python li:hover a{
+        .Python li a:hover{
             border:1px solid black;
             transform: scale(1.1);
         }
