--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href ="style_entete.css">
     <style>
         .Python li{
-            transition:0.3s
+            transition:0.3s;
+            border:1px solid
         }
         .Python li a, .Python li a:visited{
             color:black;
@@ -18,10 +19,10 @@
             transform: scale(1.1);
         }
         .Python .R{
-            border:1px solid darkred;
+            border-color:darkred;
         }
         .Python .G{
-            border:1px solid darkblue;
+            border-color:darkblue;
         }
         details{
             background-color:rgba(0,0,0,0.2);
