--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             background-color:rgba(0,0,0,0.2);
             border:2px solid black
         }
-        details:hover{
+        summary:hover{
             cursor:pointer
         }
     </style>
