--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         }
         .Python li a, .Python li a:visited{
             color:black;
+            display:inlineblock
         }
         .Python li a:hover{
             border:1px solid black;
