--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <style>
         .Python li{
             transition:0.3s;
-            border:3px solid
+            border:3px solid;
+            margin-bottom:10px;
         }
         .Python li a, .Python li a:visited{
             color:black;
@@ -27,7 +28,8 @@
         }
         details{
             background-color:rgba(0,0,0,0.2);
-            border:3px solid black
+            border:3px solid black;
+            margin-top:10px;
         }
         summary:hover{
             cursor:pointer
