--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <style>
         .Python li{
             transition:0.3s;
-            border:3px solid;
+            border-width:3px;
+            border-style:solid;
             margin-bottom:10px;
         }
         .Python li a, .Python li a:visited{
