--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             border-width:3px;
             border-style:solid;
             margin-bottom:10px;
+            
         }
         .Python li a, .Python li a:visited{
             color:black;
-            display:inlineblock
+            display:inline-block
         }
         .Python li a:hover{
             border:1px solid black;
