--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             margin-top:10px;
         }
         summary:hover{
-            cursor:pointer
+            cursor:pointer;
+            padding:1%
         }
     </style>
 </head>
