--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             color:black;
             border-width:3px;
             border-style:solid;
-            display:inline-block
+            display:inline-block;
+            padding:1%
         }
         .Python li a:hover{
             transform: scale(1.1);
