--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <a href="https://rlrgc.github.io/SIN/PageWeb/SIN_TP.html" > Liens </a> 
+    <a href="PageWeb/Sin_TP.html" > Liens </a> 
     <details>
         <summary>Fichiers de gaelBZH et RLRGC</summary>
             <h3>I- Python</h3>
