--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIN | Activités</title>
-    <link rel="stylesheet" type="text/css" href ="SIN.css">
-    <link rel="stylesheet" type="text/css" href ="style_entete.css">
+    <link rel="stylesheet" type="text/css" href ="PageWeb/SIN.css">
+    <link rel="stylesheet" type="text/css" href ="PageWeb/style_entete.css">
     <style>
         .Python li{
             transition:0.3s;
