--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             border-width:3px;
             border-style:solid;
             display:inline-block;
-            padding:1%
+            padding:2px
         }
         .Python li a:hover{
             transform: scale(1.1);
