--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             border:3px solid black;
             margin-top:10px;
             padding:1%
+            color:snow
         }
         summary:hover{
             cursor:pointer;
