--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <a href="PageWeb/Sin_TP.html" > Liens </a> 
     <details>
-        <summary>Fichiers de <span style="text-decoration:underline darkred">gaelBZH</span> et <span style="text-decoration:underline darkblue">RLRGC<span></span></summary>
+        <summary>Fichiers de <span style="text-decoration:underline darkred">GaelBZH</span> et <span style="text-decoration:underline darkblue">RLRGC<span></span></summary>
             <h3>I- Python</h3>
             <ul class="Python">
                 <li><a class="R" download href="Calculatrice.py">Calculatrice.py</a></li>
