--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             background-color:rgba(0,0,0,0.2);
             border:3px solid black;
             margin-top:10px;
-            padding:1%
-            color:snow
+            padding:1%;
+            color:snow;
         }
         summary:hover{
             cursor:pointer;
