--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             border:3px solid black;
             margin-top:10px;
             padding:1%;
-            color:snow;
+            color:#d9e1ea;
         }
         summary:hover{
             cursor:pointer;
