--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         .Python li a, .Python li a:visited{
             transition:0.3s;
-            color:black;
+            color:inherit;
             border-width:3px;
             border-style:solid;
             display:inline-block;
